Create AWE application and product Add Log4j Move jRuby to version 1.6.4